--- a/style.css
+++ b/style.css
@@ -1,54 +1,62 @@
-main {
+* {
+  margin: 0;
+  padding: 0;
+}
+#main {
   background-color: #e6f1ff;
 }
 h1 {
   color:  #001a1a;
-  margin: 0px 30%;
+  margin: 0px auto;
   padding: 30px 0px 0px 0px;
   text-align: center;
 }
-#orta {
-  text-align: center;
-  color:  #004d4d;
+h1 span {
+  font-size: smaller;
+  font-style: italic;
+  color: rgb(71, 71, 71);
 }
+#img-div {
+  padding: 30px 0;
+  width: 95%;
+  margin: auto;
+  background-color: whitesmoke;
+  box-shadow: inset 1px 1px 3px rgb(95, 74, 43);
+}
+#img-div img {
+  height: auto;
+  width:80%;
+  display: block;
+  margin: 10px auto;
+  box-shadow: 3px 2px 5px rgb(95, 74, 43), -3px 2px 5px rgb(95, 74, 43);
+}
+#center {
+  margin: 10px 0;
+  text-align: center;
+}
+#img-caption{
+  width: 70%;
+  margin: auto;
+  font-size: 14px;
+  text-align: center;
+}
+
+#tribute-info {
+  width: 75%;
+  margin: 10px auto;
+  padding: 25px;
+}
+
 h3 {
   color:  #0066cc;
-  margin: 10px 10px;
+  margin: 10px 0;
   text-align: center;
 }
-ul, li {
-  margin: 10px 50px 20px 50px;
+
+ul {
+  margin: 2% 2% 2% 2%;
 }
-p {
-  color:  #00111a;
-  text-align: center;
-}
-p a {
-  color: #b3e6ff
-}
-figcaption {
-  text-align: center;
-}
-#img-caption {
-  text-align: center;
-  padding: 10px 150px;
-}
-figure {
-  background-color: #ffffcc;
-}
-#image {
-  margin: 5px 5px 5px 5px;
-  padding: 5% 10% 5% 10%;
-}
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-li {
-  height: 100px;
-  padding: 25px 50px;
-  box-sizing: border-box;
-  list-style-type: none;
+
+a {
+  color: #292b2c
 }
