--- a/style.css
+++ b/style.css
@@ -1,40 +1,48 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
 }
+
 #main {
   background-color: #e6f1ff;
 }
+
 h1 {
-  color:  #001a1a;
+  color: #001a1a;
   margin: 0px auto;
   padding: 30px 0px 0px 0px;
   text-align: center;
 }
+
 h1 span {
   font-size: smaller;
   font-style: italic;
   color: rgb(71, 71, 71);
 }
+
 #img-div {
   padding: 30px 0;
-  width: 95%;
+  width: 60%;
   margin: auto;
   background-color: whitesmoke;
   box-shadow: inset 1px 1px 3px rgb(95, 74, 43);
 }
-#img-div img {
+
+#image {
   height: auto;
-  width:80%;
+  max-width: 80%;
   display: block;
   margin: 10px auto;
   box-shadow: 3px 2px 5px rgb(95, 74, 43), -3px 2px 5px rgb(95, 74, 43);
 }
+
 #center {
   margin: 10px 0;
   text-align: center;
 }
-#img-caption{
+
+#img-caption {
   width: 70%;
   margin: auto;
   font-size: 14px;
@@ -42,13 +50,13 @@ h1 span {
 }
 
 #tribute-info {
-  width: 75%;
+  width: 55%;
   margin: 10px auto;
   padding: 25px;
 }
 
 h3 {
-  color:  #0066cc;
+  color: #0066cc;
   margin: 10px 0;
   text-align: center;
 }
